# Straw_SamExtensions-DLL-Source

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CREDITS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_plugin.bat
src/: CompatPch.h  Plugin.cpp
